--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,23 +3,22 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "altwallet-merchant-agent"
+name = "altwallet_agent"
 version = "0.1.0"
-description = "AltWallet Agent for Merchant - A CLI tool for card recommendations"
+description = "AltWallet Checkout Agent - Core Engine MVP"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 license = "MIT"
 authors = [
     {name = "AltWallet Team", email = "support@altwallet.com"},
 ]
-keywords = ["credit-cards", "cashback", "recommendations", "cli"]
+keywords = ["checkout", "agent", "payment", "recommendations", "cli"]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "Intended Audience :: End Users/Desktop",
+    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Office/Business :: Financial",
@@ -28,40 +27,89 @@ classifiers = [
 dependencies = [
     "typer>=0.9.0",
     "rich>=13.0.0",
+    "pydantic>=2.5.0",
+    "structlog>=23.0.0",
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "python-dotenv>=1.0.0",
+    "httpx>=0.25.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.0.0",
-    "black>=23.0.0",
-    "isort>=5.12.0",
-    "flake8>=6.0.0",
+    "black>=23.11.0",
+    "ruff>=0.1.0",
+    "mypy>=1.7.0",
+    "pre-commit>=3.5.0",
 ]
 
 [project.scripts]
-altwallet-merchant-agent = "altwallet_merchant_agent.cli:app"
+altwallet_agent = "altwallet_agent.cli:app"
 
 [project.urls]
-Homepage = "https://github.com/altwallet/merchant-agent"
-Repository = "https://github.com/altwallet/merchant-agent"
-Issues = "https://github.com/altwallet/merchant-agent/issues"
+Homepage = "https://github.com/altwallet/checkout-agent"
+Repository = "https://github.com/altwallet/checkout-agent"
+Issues = "https://github.com/altwallet/checkout-agent/issues"
 
 [tool.hatch.build.targets.wheel]
-packages = ["altwallet_merchant_agent"]
+packages = ["src/altwallet_agent"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-python_files = ["test_*.py"]
+python_files = ["test_*.py", "*_tests.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "-v --tb=short"
+addopts = "-v --tb=short --cov=src/altwallet_agent --cov-report=term-missing --cov-report=html"
 
 [tool.black]
 line-length = 88
-target-version = ['py310']
+target-version = ['py311']
 include = '\.pyi?$'
+src = ["src"]
 
-[tool.isort]
-profile = "black"
-line_length = 88
+[tool.ruff]
+target-version = "py311"
+line-length = 88
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+
+[[tool.mypy.overrides]]
+module = [
+    "structlog.*",
+    "rich.*",
+    "typer.*",
+]
+ignore_missing_imports = true
