--- a/.dockerignore
+++ b/.dockerignore
@@ -3,75 +3,77 @@
 .gitignore
 
 # Python
-__pycache__
-*.pyc
-*.pyo
-*.pyd
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 .Python
-env
-pip-log.txt
-pip-delete-this-directory.txt
-.tox
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.log
-.git
-.mypy_cache
-.pytest_cache
-.hypothesis
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Virtual environments
-.env
-.venv
-env/
 venv/
+env/
 ENV/
-env.bak/
-venv.bak/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Project specific
-node_modules/
-*.egg-info/
-dist/
-build/
-htmlcov/
+# Testing
+.pytest_cache/
 .coverage
-openapi.json
+htmlcov/
+.tox/
 
 # Documentation
 docs/
 *.md
 !README.md
 
-# Tests (keep only what's needed)
-tests/golden/data/
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# Node.js (if any)
+node_modules/
+npm-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
+
+# Local development
+.env
+.env.local
+.env.*.local
+
+# Data files
+data/
 tests/data/
 
-# Development files
-Makefile
-setup.bat
-setup.ps1
-run_tests.ps1
-jest.config.js
-package.json
-package-lock.json
+# Coverage reports
+htmlcov/
