--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.25.0",
+    "PyYAML>=6.0.0",
 ]
 
 [project.optional-dependencies]
@@ -44,6 +45,7 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.7.0",
     "pre-commit>=3.5.0",
+    "types-PyYAML>=6.0.0",
 ]
 
 [project.scripts]
