--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ python-dotenv==1.0.0
 # Data Validation
 pydantic==2.11.7
 
+# Configuration
+PyYAML==6.0.1
+
 # Logging
 loguru==0.7.2
 structlog==23.2.0
