Fix Python version specification in CI workflows - use explicit version numbers

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: ["3.9.18", "3.10.13", "3.11.9"]
     
     steps:
     - uses: actions/checkout@v4
@@ -82,7 +82,7 @@ jobs:
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: "3.11.9"
     
     - name: Install dependencies
       run: |
