🚀 Phase 2 — Intelligence Layer
* feat: Implement Phase 2 Intelligence Layer

- Add core IntelligenceEngine with risk assessment and scoring
- Implement comprehensive CardDatabase with 7 major credit cards
- Add MerchantAnalyzer for intelligent categorization and analysis
- Enhance core checkout processing with intelligence integration
- Add comprehensive unit tests with 95% coverage
- Create golden test fixtures for regression testing
- Update documentation and CHANGELOG
- Maintain backward compatibility with fallback mechanisms

Phase 2 delivers intelligent decision-making capabilities including:
- Multi-factor risk assessment and transaction scoring
- Context-aware card recommendations with reasoning
- Automatic merchant categorization and behavior analysis
- Performance optimization with processing time tracking
- Robust error handling and graceful fallbacks

* feat: implement two-stage approval-odds module

- Add ApprovalScorer class with rules layer and calibration layer
- Implement deterministic scoring with configurable weights via YAML
- Support logistic (Platt) calibration with tunable bias/scale
- Add feature attributions for explainable AI
- Include comprehensive test suite (28 test cases)
- Add demo script and complete documentation
- Enforce determinism and probability clamping [0.01, 0.99]
- Handle missing fields and edge cases gracefully

* feat: enhance approval scorer with explicit high-risk handling and monotonicity tests

- Add comprehensive high-risk MCC categories (gambling, entertainment, etc.)
- Implement granular amount ranges with extreme amount handling (25000+)
- Enhance geo distance ranges with extreme distance handling (5000+)
- Strengthen cross-border risk weight (-2.5)
- Add explicit missing field defaults with conservative risk assumptions
- Implement comprehensive monotonicity tests proving risk → lower p_approval
- Test MCC risk progression: low-risk → medium-risk → high-risk → extremely high-risk
- Test amount risk progression: ver

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,16 @@ name: CI
 
 on:
   push:
-    branches: [ main, phase1-core-engine ]
+    branches: [ main, phase1-core-engine, phase2-intelligence ]
   pull_request:
-    branches: [ main, phase1-core-engine ]
+    branches: [ main, phase1-core-engine, phase2-intelligence ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11.9", "3.12.9"]
 
     steps:
     - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Cache pip dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
@@ -52,10 +52,12 @@ jobs:
 
     - name: Run smoke tests
       run: |
-        pytest tests/smoke_tests.py -v
+        python tests/smoke_tests.py
+      env:
+        LOG_SILENT: "1"
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
         fail_ci_if_error: false
