--- a/requirements.txt
+++ b/requirements.txt
@@ -21,22 +21,15 @@ PyYAML==6.0.1
 loguru==0.7.2
 structlog==23.2.0
 
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
+# Webhook dependencies
+aiohttp==3.9.1
 
-# Development Tools
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.1
+# CLI dependencies
+click==8.1.7
+structlog==23.2.0
 
-# Database (if needed)
-# sqlalchemy==2.0.23
-# alembic==1.12.1
+# Webhook dependencies
+aiohttp==3.9.1
 
-# Security
-cryptography==45.0.6
-python-jose[cryptography]==3.3.0
-
-# Utilities
-python-multipart==0.0.6
+# CLI dependencies
+click==8.1.7
