Apply code quality improvements with black, ruff, and mypy
- Format code with black (10 files reformatted)
- Fix linting issues with ruff (13 issues resolved)
- Add type annotations with mypy (missing return types)
- Fix duplicate function definition in CLI
- Update subprocess calls to use capture_output
- Remove unused imports and fix import organization
- Update type annotations to use modern X | None syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dev = [
 ]
 
 [project.scripts]
-altwallet_agent = "altwallet_agent.cli:app"
+altwallet_agent = "altwallet_agent.cli:cli"
 
 [project.urls]
 Homepage = "https://github.com/altwallet/checkout-agent"
