fix: update test workflow to include phase4-platformization branch
- Add phase4-platformization to the list of branches that trigger the Tests workflow
- This ensures the test workflow runs for Phase 4 PRs
- Fixes the failing test check in PR #5

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, develop, phase2-intelligence ]
+    branches: [ main, develop, phase2-intelligence, phase4-platformization ]
   pull_request:
-    branches: [ main, develop, phase2-intelligence ]
+    branches: [ main, develop, phase2-intelligence, phase4-platformization ]
 
 jobs:
   test:
