fix: correct CLI command in backward compatibility check
- Change 'altwallet_agent version' to 'altwallet_agent --version'
- Fixes backward compatibility check failure at line 558
- Resolves CLI command not found error in Phase 4 guardrails workflow

--- a/.github/workflows/phase4-guardrails.yml
+++ b/.github/workflows/phase4-guardrails.yml
@@ -49,7 +49,7 @@ jobs:
         
         # Test CLI commands still work
         altwallet_agent --help
-        altwallet_agent version
+        altwallet_agent --version
         
         echo "Backward compatibility verified"
       env:
