Orca Alignment: branding + non-breaking renames
- Update OpenAPI spec title and contact info to Orca
- Update API implementation with Orca branding
- Update CLI interface with Orca branding
- Update package metadata (pyproject.toml) to orca_checkout
- Update Docker labels and container metadata
- Update Docker Compose service names and images
- Update Helm chart names and values
- Update environment variables to ORCA_ prefix
- Update package init files with Orca contact info
- Add compatibility shim for backward compatibility
- Create comprehensive MIGRATION.md guide
- Update README.md with Orca branding throughout
- Maintain backward compatibility where possible

This is Phase 1 of the Orca alignment - non-breaking changes
with deprecation warnings for old references.

--- a/deploy/helm/altwallet-checkout-agent/Chart.yaml
+++ b/deploy/helm/altwallet-checkout-agent/Chart.yaml
@@ -1,17 +1,17 @@
 apiVersion: v2
-name: altwallet-checkout-agent
-description: AltWallet Checkout Agent - Intelligent card recommendations and transaction scoring
+name: orca-checkout-agent
+description: Orca Checkout Agent - Intelligent card recommendations and transaction scoring
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
-home: https://github.com/altwallet/checkout-agent
+home: https://github.com/orca/checkout-agent
 sources:
-  - https://github.com/altwallet/checkout-agent
+  - https://github.com/orca/checkout-agent
 maintainers:
-  - name: AltWallet Team
-    email: team@altwallet.com
+  - name: Orca Team
+    email: team@orca.com
 keywords:
-  - altwallet
+  - orca
   - checkout
   - payment
   - credit-cards
