Complete Orca alignment migration - v1.1.0-orca.0
- Complete branding migration from AltWallet to Orca
- Enhanced API with Orca decision engine (APPROVE/REVIEW/DECLINE)
- New response fields: actions, routing_hints, orca_features
- Enterprise-grade quality gates with 85% coverage requirement
- Comprehensive test suite with Orca scenarios
- Backward compatibility maintained with deprecation warnings
- ORCA_ environment variable prefix with legacy support
- Complete documentation and migration guide
- Docker and Helm chart updates for Orca branding
- OpenAPI v1.1.0 with real-world Orca examples

All 10 major tasks completed successfully with 100% backward compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "orca_checkout"
-version = "0.1.0"
+version = "1.1.0-orca.0"
 description = "Orca Checkout Agent - Core Engine MVP"
 readme = "README.md"
 requires-python = ">=3.11"
