--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,14 @@ services:
       retries: 3
       start_period: 40s
     labels:
-      - "org.opencontainers.image.version=${VERSION:-0.1.0}"
-      - "org.opencontainers.image.title=Orca Checkout Agent"
-      - "org.opencontainers.image.description=Core Engine MVP for checkout processing and scoring"
+      - "org.opencontainers.image.version=${VERSION:-1.1.0-orca.0}"
+      - "org.opencontainers.image.title=orca-checkout"
+      - "org.opencontainers.image.description=Orca Checkout Agent - Intelligent payment processing and card recommendations"
       - "org.opencontainers.image.vendor=Orca"
+      - "org.opencontainers.image.url=https://github.com/orca/checkout-agent"
+      - "org.opencontainers.image.documentation=https://github.com/orca/checkout-agent/blob/main/README.md"
+      - "org.opencontainers.image.licenses=MIT"
+      - "com.orca.service=checkout-agent"
+      - "com.orca.version=${VERSION:-1.1.0-orca.0}"
+      - "com.orca.component=api"
+      - "com.orca.environment=${ENVIRONMENT:-development}"
